# housing-price-predictor

./: README.md  pyproject.toml
docs/: report.md
src/: data_loader.py  main.ipynb  main.py
